--- a/index.html
+++ b/index.html
@@ -110,10 +110,14 @@
         }
         .grid-grp{
             display: flex;
+            justify-content: center;
+            align-items: center;
         }
         .dots{
-            width: 0px;
+            font-size: 20px;
             color: white;
+            margin-left: 0px;
+            margin-right: 2px;
         }
         .dd{
             position: relative;
